--- a/styles/styles.css
+++ b/styles/styles.css
@@ -9,7 +9,7 @@
 
 body{
     margin: 0;
-    background-image: url("starbackground.jpg");
+    background-image: url("images/starbackground.jpg");
     background-color: #2f2d52;
 }
 
